# aria-ai

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FINAL_ARCHITECTURE.md  INTEGRATION_PLAN.md  INTEGRATION_PLAN_V2.md  INTEGRATION_PLAN_V3.md  INTEGRATION_PLAN_V4.md  MEGAN_Architecture_Design.md  PLAN_ACCION.md  PLAN_ESTRATEGICO.md  README.md  SCALE_ARCH.md  SECURITY.md  SECURITY_REPORT.md  TRANSFORMATION_REPORT.md  docker-compose.yml  fly.toml  main.py  megan_production.db  megan_test_memory.db  migrate_to_megan.sh  pyproject.toml  requirements.txt  requirements_optimized.txt  supabase_schema.sql  test_hf_hub.py  test_hf_real.py  vercel.json
.github/: dependabot.yml
agent-system/: .env.example  Dockerfile.api  docker-compose.yml  main.py  requirements.txt
apps/: __init__.py
aria/: __init__.py
aria_os/: contracts.py
config/: otel-collector.yml  prometheus.yml
database/: fix_agents_columns.sql  missing_tables.sql  monetization_schema.sql  schema.sql  social_accounts_schema.sql  voice_identity.sql
docs/: ADR-001-Foundational-Cleanup.md  ADR-003-Autonomy-Stealth-Roadmap.md  API_SETUP_GUIDE.md  ARCHITECTURE_REVIEW.md  ARIA_ECOMMERCE_STRATEGY.md  AUTONOMY_AUDIT_REPORT.md  CONNECTORS_SETUP.md  MEGAN_Architecture_Design.md  SETUP_GUIDE.md  ULTRA_DETAILED_API_GUIDE.md  VIDEO_ENGINE.md  architecture_design.md  index.html  market_research_benchmarks.md  privacy.html  research_mcp_zapier.md  saraph.html  terms.html
infra/: docker-compose.yml
instrument.js/: mjs.
scripts/: computer_agent_demo.py  demo_zapier_aria.py  (+8 more)
src/: main.py
(+779 files in other folders)
